Thin scrollbars lose up/down/left/right arrow buttons on windows 10
Categories
(Firefox :: Theme, defect)
Tracking
()
People
(Reporter: stephen.cunliffe, Unassigned, NeedInfo)
Details
Attachments
(3 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:136.0) Gecko/20100101 Firefox/136.0
Steps to reproduce:
1.) Set CSS "scrollbar-width:thin;" on an element that scrolls/overflows.
2.) Observe that the arrows to scroll up/down are lost (Windows 10/Firefox), unlike in other/Chromium browsers
Actual results:
The arrows to scroll up/down are lost
Expected results:
Arrows should have remained, just render at the smaller size. (with the square "thumb" portion of the scrollbar only showing, it looks like the content scrolls under and beyond the container (e.g. artificially clipped)
Reporter | ||
Comment 1•22 days ago
|
||
normal scrollbar in Firefox
Reporter | ||
Comment 2•22 days ago
|
||
Thin scrollbar in Firefox
Reporter | ||
Comment 3•22 days ago
|
||
Thin scrollbar in Chrome
Reporter | ||
Comment 4•22 days ago
|
||
Not critical, but the rounded end thumb screw when rendered as a thin scrollbar looks nice too... I'd be fine with adding that look as well.
Comment 5•22 days ago
|
||
Hmm, interesting, it seems chrome uses win11-style thin scrollbars. If you go to about:config
and set widget.non-native-theme.scrollbar.style
to 5
, do you get the expected behavior?
Comment 6•22 days ago
|
||
I think you'll also get more-rounded "thick" scrollbars.
Updated•22 days ago
|
Updated•11 days ago
|
Description
•