Bug 1956974 - make thin scrollbars have thumb buttons on Windows r=spohl,win-reviewers,desktop-theme-reviewers,handyman,emilio

Per the bug, all thin scrollbars in the Windows OS (that I could find)
do have thumb buttons for scrolling up/down, so we should match that.

Differential Revision: https://phabricator.services.mozilla.com/D269217